--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "dev": "npx nodemon",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
@@ -25,5 +26,12 @@
     "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "fastify": "^4.24.3",
+    "mongodb": "^5.2.0",
+    "reflect-metadata": "^0.1.14",
+    "typeorm": "^0.3.17",
+    "zod": "^3.22.4"
   }
 }
